[b]Version 0.6.9[/b]:

(2009-11-19)
 * Added the new option "Save SMPlayer log to file" in Preferences -> Advanced
   -> Logs. If the option is checked, the smplayer logs will be saved to
   to a file named smplayer_log.txt in the smplayer config file (in linux
   $HOME/.config/smplayer/).

(2009-11-06)
 * Pass the text for the slave command osd_show_text in utf8. Should fix
   bug #2854097 (incorrect charset in OSD texts). 
   Fix based on a patch by c0rnholio 
   (https://sourceforge.net/tracker/?func=detail&atid=913575&aid=2893306&group_id=185512)

(2009-10-26)
 * Added a new option for smplayer.ini: fast_load_sub
   If true (the default) loading an external subtitle will be fast
   because it will be done by using a slave command (which is nice but it
   has the problem that smplayer may restore the wrong subtitle after a
   restart of the video). If false, the subtitle will be loaded by
   restarting mplayer (which is a little bit slower but doesn't have the
   mentioned problem).

(2009-10-20)
 * Bugfix: pad the hash for opensubtitles with zeroes. This bug caused that
   sometimes smplayer couldn't find any subtitles for a given file.

(2009-10-03)
 * Applied patch smplayer-3270-mandriva-mplayer-version.patch by Anssi Hannula 
   (http://sourceforge.net/users/anssih/). Makes SMPlayer detect the mplayer 
   version strings in Mandriva.

(2009-09-14)
 * New action "show_filename" (assigned to Shift+I). It displays the filename
   in the OSD.

(2009-09-13)
 * Don't pass to mplayer any audio filter (-af ...) when using -afm hwac3.

(2009-09-09)
 * (Streams) Added support to 'StreamTitle' without 'StreamUrl'

(2009-09-04)
 * Applied patch mousewheel_seekalt_checkbox_r3257.patch by Steven Eastland
   (grassmonk at users.sourceforge.net). It adds the possibility to reverse
   the direction of seeking with the mouse wheel.

(2009-08-31)
 * Added the checkbox "Disable video filters when using vdpau" in Preferences ->
   General -> Video.

(2009-08-30)